src/objects/Event_Registration__c.object
<CustomObject>
    <label>Participant</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Participant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Participants</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>Attendee_Company__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_E_mail__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee E-mail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Attendee ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Mailing_Address__c</fullName>
        <formula>Contact__r.MailingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Mailing_City__c</fullName>
        <formula>Contact__r.MailingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Mailing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Mailing_Country__c</fullName>
        <formula>Contact__r.MailingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Mailing Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Mailing_State__c</fullName>
        <formula>Contact__r.MailingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Mailing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Mailing_Zip_Code__c</fullName>
        <formula>Contact__r.MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Mailing Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Mobile_Phone__c</fullName>
        <formula>Contact__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Mobile Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Office_Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Office Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Info__c</fullName>
        <formula>IF( RecordType.DeveloperName = &quot;External&quot; , Contact__r.Account.Name , &quot;Nokia&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Role__c</fullName>
        <formula>IF(RecordType.DeveloperName = &quot;Internal&quot;,  User__r.Title  , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Company</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Will Be available on External Participant Record Type</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Participants</relationshipLabel>
        <relationshipName>Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dietary_Needs__c</fullName>
        <label>Dietary Needs</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Diabetic</fullName>
                </value>
                <value>
                    <fullName>Gluten-Free</fullName>
                </value>
                <value>
                    <fullName>Low Cholesterol / Low Fat</fullName>
                </value>
                <value>
                    <fullName>Low Sodium</fullName>
                </value>
                <value>
                    <fullName>Non-Lactose</fullName>
                </value>
                <value>
                    <fullName>Nut or Peanut Allergies</fullName>
                </value>
                <value>
                    <fullName>Vegetarian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Content_owner__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Content owner</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Function_Lead__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Function Lead</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Participant_Assistant__c</fullName>
        <description>Store the email that is going to be notified and can either be the user or the assistant</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Participant / Assistant</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>IF( 
				AND(NOT(ISBLANK(User__c)),RecordType.Name=&apos;Internal&apos;),
				User__r.Email,
				    if(
												AND(NOT(ISBLANK(Contact__c)),RecordType.Name=&apos;External&apos;),
												Contact__r.Email,
												Email_Participant_Assistant__c
								)
)</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventCustomerSolutionArchitectMember__c</fullName>
        <formula>Event__r.Customer_Solution_Architect__r.User_18_Digit_ID__c</formula>
        <label>Event Customer Solution Architect Member</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventHostMember__c</fullName>
        <formula>Event__r.Event_Host__r.User_18_Digit_ID__c</formula>
        <label>Event Host Member</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventMarketingMember__c</fullName>
        <formula>Event__r.Marketing__r.User_18_Digit_ID__c</formula>
        <label>Event Marketing Member</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventOwnerName__c</fullName>
        <formula>Event__r.Owner:Queue.QueueName</formula>
        <label>EventOwnerName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventRecordTypeId__c</fullName>
        <formula>LEFT(Event__r.RecordType.Id, 15)</formula>
        <label>EventRecordTypeId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Account_Name__c</fullName>
        <formula>Event__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Event_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Participants</relationshipLabel>
        <relationshipName>Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_record_type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Event record type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_start_date__c</fullName>
        <description>In order to notify the participants 7 days before the start date to confirmed presence</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Event start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GLT_assistant_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GLT assistant ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_in_Badge__c</fullName>
        <description>Name to be printed in Event Badge</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Name to be printed in Event Badge</inlineHelpText>
        <label>Name in Badge</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_on_Badge__c</fullName>
        <description>Name to be printed on Event Badge</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Name to be printed on Event Badge</inlineHelpText>
        <label>Name on Badge</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Track_of_Interest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary Event Track that the contact is interested in.</description>
        <inlineHelpText>Primary Event Track that the contact is interested in.</inlineHelpText>
        <label>Primary Track of Interest</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Event__c</field>
                <operation>equals</operation>
                <valueField>Track__c.Event__c</valueField>
            </filterItems>
            <infoMessage>Please select a Track from the selected event</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Track__c</referenceTo>
        <relationshipName>Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Registration_Type__c</fullName>
        <label>Registration Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Paid</fullName>
                    <default>true</default>
                    <label>Paid</label>
                </value>
                <value>
                    <fullName>Complementary - Vendor</fullName>
                </value>
                <value>
                    <fullName>Complementary - Prospect</fullName>
                </value>
                <value>
                    <fullName>Complementary - Media</fullName>
                </value>
                <value>
                    <fullName>Complementary - Speaker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CT Member</fullName>
                </value>
                <value>
                    <fullName>Speaker / Host</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Content</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sessions_to_confirm__c</fullName>
        <label>Sessions to confirm</label>
        <summaryFilterItems>
            <field>ERM_Stakeholder__c.Status__c</field>
            <operation>equals</operation>
            <value>Invited</value>
        </summaryFilterItems>
        <summaryForeignKey>ERM_Stakeholder__c.Participant__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sort__c</fullName>
        <formula>Case (Role__c , 
						&quot;Customer&quot;,       &quot;1&quot;, 
						&quot;Speaker / Host&quot;, &quot;2&quot;,
						&quot;CT Member&quot;,      &quot;3&quot;,
						&quot;Content&quot;,        &quot;4&quot;,
						                  &quot;5&quot;
						)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sort</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ERM_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title_in_Badge__c</fullName>
        <description>Title to be printed in Badge</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Title to be printed in Badge</inlineHelpText>
        <label>Title in Badge</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_on_Badge__c</fullName>
        <description>Title to be printed on Badge</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Title to be printed on Badge</inlineHelpText>
        <label>Title on Badge</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Will be available on Internal Participant Record Type</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>Participant_status_this_month_events</fullName>
        <columns>NAME</columns>
        <columns>Event__c</columns>
        <columns>Status__c</columns>
        <columns>Event_start_date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Event_Registration__c.Internal</value>
        </filters>
        <label>Participant status this month events</label>
    </listViews>
    <listViews>
        <fullName>Participants_to_confirm</fullName>
        <columns>NAME</columns>
        <columns>Event__c</columns>
        <columns>Status__c</columns>
        <columns>Event_start_date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Event_Registration__c.Internal</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Invited</value>
        </filters>
        <label>Participants to confirm</label>
    </listViews>
    <recordTypes>
        <fullName>External</fullName>
        <active>true</active>
        <description>Record Type for Contacts Participants</description>
        <label>External</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal</fullName>
        <active>true</active>
        <description>Record Type for Internal Nokia Participants</description>
        <label>Internal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_Identified</fullName>
        <active>true</active>
        <description>Record Type for Non Identified Participants</description>
        <label>Non Identified</label>
    </recordTypes>
    <sharingReasons>
        <fullName>Share_Participants_with_Users__c</fullName>
        <label>Share Participants with Users</label>
    </sharingReasons>
    <validationRules>
        <fullName>CannotUpdateEventOnParticipant</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(ISBLANK(PRIORVALUE(Event__c))),
ISCHANGED(Event__c),
NOT(ISNEW())
)</errorConditionFormula>
        <errorDisplayField>Event__c</errorDisplayField>
        <errorMessage>You cannot update the Event of this Participant.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_change_record_type</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( RecordTypeId )</errorConditionFormula>
        <errorMessage>Action not allowed - cannot change record type of the participant</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_remove_participant</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(ISBLANK(PRIORVALUE(User__c))),  
ISCHANGED(User__c),
NOT(ISNEW())
)</errorConditionFormula>
        <errorDisplayField>User__c</errorDisplayField>
        <errorMessage>Cannot change User field. Change Status to declined and add a new internal participant</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Content_Participant_cant_answer_events</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
    Event__r.RecordType.DeveloperName = &quot;ERM&quot; 
    , OR( 
        OR(ISPICKVAL(Role__c, &quot;Content&quot;) 
    ,      ISPICKVAL(Role__c, &quot;CT Member&quot;)
										)
								)
    , OR( 
        ISPICKVAL(Status__c, &quot;Confirmed&quot;) 
        , ISPICKVAL(Status__c, &quot;Rejected&quot;) 
        , ISPICKVAL(Status__c, &quot;Partial Confirmed&quot;) 
    ) 
)</errorConditionFormula>
        <errorMessage>Only a speaker or assistant can accept or reject an invitation for ERM.</errorMessage>
    </validationRules>
</CustomObject>