src/objects/Event_Registration__c/validationRules/Content_Participant_cant_answer_events.validationRule-meta.xml
<ValidationRule>
    <fullName>Content_Participant_cant_answer_events</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
    Event__r.RecordType.DeveloperName = &quot;ERM&quot; 
    , OR( 
        OR(ISPICKVAL(Role__c, &quot;Content&quot;) 
    ,      ISPICKVAL(Role__c, &quot;CT Member&quot;)
										)
								)
    , OR( 
        ISPICKVAL(Status__c, &quot;Confirmed&quot;) 
        , ISPICKVAL(Status__c, &quot;Rejected&quot;) 
        , ISPICKVAL(Status__c, &quot;Partial Confirmed&quot;) 
    ) 
)</errorConditionFormula>
    <errorMessage>Only a speaker or assistant can accept or reject an invitation for ERM.</errorMessage>
</ValidationRule>