src/objects/Event_Registration__c/listViews/Participant_status_this_month_events.listView-meta.xml
<ListView>
    <fullName>Participant_status_this_month_events</fullName>
    <columns>NAME</columns>
    <columns>Event__c</columns>
    <columns>Status__c</columns>
    <columns>Event_start_date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Event_Registration__c.Internal</value>
    </filters>
    <label>Participant status this month events</label>
</ListView>