src/objects/Event_Registration__c/listViews/Participants_to_confirm.listView-meta.xml
<ListView>
    <fullName>Participants_to_confirm</fullName>
    <columns>NAME</columns>
    <columns>Event__c</columns>
    <columns>Status__c</columns>
    <columns>Event_start_date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Event_Registration__c.Internal</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Invited</value>
    </filters>
    <label>Participants to confirm</label>
</ListView>